# smpsim

./: AUTHORS  README  configure.ac
input/: 130-1  130-2  130-3  130-4  16-1  16-2  16-3  16-4  256-1  256-2  256-3  256-4  3-1  7-1  7-2  7-3  7-4  800-1  800-2  800-3  800-4  output
src/: smp_sim.c  smp_sim.c.orig  smp_sim.h  smp_sim.pl
src/cbase/: Makefile.am  TAGS  common.c  common.h  error.c  error.h  xmalloc.c  xmalloc.h
